--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   gtag('config', 'G-2BQBHVMQWH');
 </script>
 </head>
-<body>
+<body class="container">
   <app-root></app-root>
 </body>
 </html>
