--- a/src/index.html
+++ b/src/index.html
@@ -18,5 +18,8 @@
 </head>
 <body class="container">
   <app-root></app-root>
+  <script src="assets/js/chart.min.js"></script>
+  <script src="assets/js/bs-init.js"></script>
+  <script src="assets/js/theme.js"></script>
 </body>
 </html>
