--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-2BQBHVMQWH"></script>
 <script>
@@ -16,7 +17,7 @@
   gtag('config', 'G-2BQBHVMQWH');
 </script>
 </head>
-<body class="container">
+<body >
   <app-root></app-root>
   <script src="assets/js/chart.min.js"></script>
   <script src="assets/js/bs-init.js"></script>
